--- a/lab4-R.ipynb
+++ b/lab4-R.ipynb
@@ -41,6 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://github.com/Zihao-Sheng/DATA_550_lab4_group14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 0. The back story"
    ]
   },
