--- a/lab4-Python.ipynb
+++ b/lab4-Python.ipynb
@@ -41,6 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://github.com/Zihao-Sheng/DATA_550_lab4_group14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 0. The back story"
    ]
   },
@@ -100,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +116,7 @@
        "RendererRegistry.enable('mimetype')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +259,7 @@
        "4      EUS    Basque                 4.83                2082    Europe"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1613,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1857,7 @@
        "[2288 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1982,7 @@
        "4     7.540279  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3329,7 +3336,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3404,7 +3411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3631,7 +3638,7 @@
        "[2288 rows x 11 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3656,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -33699,7 +33706,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33806,7 +33813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -66512,7 +66519,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66539,7 +66546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66647,7 +66654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -68792,7 +68799,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68845,7 +68852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68868,7 +68875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -69162,7 +69169,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69189,7 +69196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -69346,7 +69353,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69380,7 +69387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -71948,7 +71955,7 @@
        "https://altair-viz.github.io/user_guide/display_frontends.html#troubleshooting\n"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
